# ralph-cc-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
apollo-mcp-server/: pyproject.toml  server.py
google-sheets-mcp-server/: .gitignore  generate_token.py  pyproject.toml  requirements.txt  server.py
specs/: icp.md
specs/companies/: prompt.md
specs/people/: prompt.md
